sampler/chain/projects/zuul/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/netty/connectionpool/DefaultClientChannelManager.java:442: error: [NullAway] (INDEX= 165) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                    /* secureHealthCheckUrl= */ null,
                                                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/netty/connectionpool/DefaultClientChannelManager.java:439: error: [NullAway] (INDEX= 162) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                    /* homePageUrl= */ null,
                                       ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/netty/filter/BaseZuulFilterRunner.java:255: error: [NullAway] (INDEX= 115) (Covered) passing @Nullable parameter 'snapshot' where @NonNull is required
            recordFilterCompletion(FAILED, filter, startTime, inMesg, snapshot);
                                                                      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/util/HttpUtils.java:108: error: [NullAway] (INDEX= 62) (Covered) returning @Nullable expression from method with @NonNull return type
            return null;
            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/zuul/zuul-core/src/main/java/com/netflix/zuul/filters/endpoint/ProxyEndpoint.java:485: error: [NullAway] (INDEX= 84) (Covered) passing @Nullable parameter 'null' where @NonNull is required
                            requestConfig.setProperty(ReadTimeout, null);
                                                                   ^

	(see http://t.uber.com/nullaway )
